# guardrails

./: CLASS_LESSON_PLAN.md  README.md  main.py  pyproject.toml  test_simple.py
config/: config.yml  rails.co
docs/: CLASS_LESSON_PLAN.md  COLANG_GUARDRAILS_GUIDE.md  CONFIG_PROGRESSIVE_GUIDE.md  SECURITY_EXAMPLES.md
docs/colang-curriculum/: README.md
docs/colang-curriculum/01-foundation/: 01-colang-basics-syntax.md  02-user-bot-messages.md  04-variables-context-management.md  05-actions-integration.md
docs/concepts/: README.md
docs/concepts/01-foundation/: 01-ai-security-fundamentals.md  02-llm-vulnerabilities.md  03-nemo-guardrails-overview.md  04-security-architecture.md  05-configuration-structure.md
docs/concepts/02-intermediate/: 01-input-security.md  02-output-security.md  03-dialog-control.md  04-advanced-attack-prevention.md
docs/concepts/03-advanced/: 01-enterprise-integration.md  02-advanced-research-topics.md  03-custom-guardrails-development.md
docs/concepts/04-expert/: 01-expert-security-operations.md  02-security-research-development.md  03-future-technologies-trends.md  04-capstone-project-assessment.md
src/: simple_rag.py
tests/: SENSITIVE_DATA_INVENTORY.md
